pastebinAPI/kubernetes/pastebin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pastebin-deployment
  labels:
    app: pastebin

spec:
  replicas: 2

  selector:
    matchLabels:
      app: pastebin

  template:
    metadata:
      labels:
        app: pastebin

    spec:
      containers:
        - name: pastebin
          image: pastebin:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"

            limits:
              memory: "512Mi"
              cpu: "500m"

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 80
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
