pastebinAPI/kubernetes/pastebin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pastebin-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: pastebin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pastebin-service
                port:
                  number: 80
